# enspired

./: pyproject.toml  task_en (1) (1).txt
src/apartment_and_chair_ltd/: chair_type.py  get_chair_plan.py  helpers.py
src/apartment_and_chair_ltd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_chair_type.py  test_helpers.py
tests/__pycache__/: test_helpers.cpython-311-pytest-7.4.3.pyc.12484
