[build-system]
requires = ["click", "logging", "os", "pathlib", "pandas", "json", "yaml", "typing", "sys", "pytest", "collections"]

[project]
name = "apartment_and_chair_ltd"
version = "0.0.1"
authors = [
  { name="Olivera Janic", email="someemail@sth.com" },
]
description = "A command line tool that reads in floor plan file and outputs the information on chair types"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Freely Distributable",
    "Operating System :: OS Independent",
]